--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,18 @@
-*{
+@use "./responsive.scss";
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
 
-body{
+
+body {
     font-family: "Lato", sans-serif;
     overflow: hidden;
 }
