--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -1,12 +1,14 @@
-.homePage{
+@use '../../responsive.scss';
+
+.homePage {
 
     display: flex;
     height: 100%;
 
-    .textContainer{
+    .textContainer {
         flex: 3;
 
-        .wrapper{
+        .wrapper {
             padding-right: 100px;
             display: flex;
             flex-direction: column;
@@ -14,20 +16,44 @@
             gap: 3rem;
             height: 100%;
 
-            .title{
-                font-size: 3.6rem;
+            @include responsive.md {
+                padding: 0;
             }
 
-            .boxes{
+            @include responsive.sm {
+                justify-content: flex-start;
+            }
+
+            .title {
+                font-size: 3.6rem;
+
+                @include responsive.lg {
+                    font-size: 3.3rem;
+                }
+
+                @include responsive.sm {
+                    font-size: 2.5rem;
+                }
+            }
+
+            .boxes {
                 display: flex;
                 justify-content: space-between;
 
-                .box{
-                    h1{
+                @include responsive.sm {
+                    display: none;
+                }
+
+                .box {
+                    h1 {
                         font-size: 2rem;
+
+                        @include responsive.lg {
+                            font-size: 1.8rem;
+                        }
                     }
 
-                    h2{
+                    h2 {
                         font-size: 1.2rem;
                         font-weight: 300;
                     }
@@ -37,17 +63,26 @@
 
     }
 
-    .imgContainer{
+    .imgContainer {
         flex: 2;
         background-color: #fcf5f3;
         position: relative;
         display: flex;
         align-items: center;
 
-        img{
+        @include responsive.md {
+            display: none;
+        }
+
+        img {
             width: 115%;
             position: absolute;
             right: 0;
+
+            @include responsive.lg {
+                width: 108%;
+            }
+
         }
     }
 
