--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,118 +1,154 @@
-@use "../.././responsive.scss";
+@use "../../responsive.scss";
 
 nav {
-    height: 6.25rem;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  a {
+    transition: all 0.4s ease;
+
+    @include responsive.sm {
+      display: none;
+    }
+
+    &:hover {
+      scale: 1.05;
+    }
+  }
+
+  .left {
+    flex: 3;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 1rem;
+    gap: 50px;
 
-    a {
-        transition: all 0.4s ease;
+    .logo {
+      font-weight: bold;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      img {
+        width: 28px;
+      }
+
+      span {
+        @include responsive.md {
+          display: none;
+        }
 
         @include responsive.sm {
-            display: none
+          display: initial;
         }
+      }
+    }
+  }
+  .right {
+    flex: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: #fcf5f3;
+    height: 100%;
 
-        &:hover {
-            scale: 1.05;
-        }
-
+    @include responsive.md {
+      background-color: transparent;
     }
 
-    .left {
-        flex: 3;
-        display: flex;
-        align-items: center;
-        gap: 3rem;
-
-        .logo {
-            font-weight: bold;
-            font-size: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-
-            img {
-                width: 28px;
-            }
-
-            span {
-                @include responsive.md {
-                    display: none;
-                }
-
-                @include responsive.sm {
-                    display: initial;
-                }
-
-            }
-        }
+    a {
+      padding: 12px 24px;
+      margin: 20px;
     }
 
-    .right {
-        flex: 2;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        background-color: #fcf5f3;
-        height: 100%;
+    .user{
+      display: flex;
+      align-items: center;
+      font-weight: bold;
 
-        @include responsive.md {
-            background-color: transparent;
+      img{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 20px;
+      }
+
+      span{
+        @include responsive.sm{
+          display: none;
+        }
+      }
+
+      .profile{
+        padding: 12px 24px;
+        background-color: #fece51;
+        cursor: pointer;
+        border: none;
+        position: relative;
+        
+        .notification{
+          position: absolute;
+          top: -8px;
+          right: -8px;
+          background-color: red;
+          color: white;
+          border-radius: 50%;
+          width: 26px;
+          height: 26px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
 
+      }
+    }
+
+    .register {
+      background-color: #fece51;
+    }
+
+    .menuIcon {
+      display: none;
+      z-index: 999;
+
+      img {
+        width: 36px;
+        height: 36px;
+        cursor: pointer;
+      }
+
+      @include responsive.sm {
+        display: inline;
+      }
+    }
+
+    .menu {
+      position: absolute;
+      top: 0;
+      right: -50%;
+      background-color: black;
+      color: white;
+      height: 100vh;
+      width: 50%;
+      transition: all 1s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+
+      &.active {
+        right: 0;
+      }
+
+      @include responsive.sm {
         a {
-            padding: 12px 24px;
-            margin: 20px;
+          display: initial;
         }
-
-        .register {
-            background-color: #fece51;
-        }
-
-
-        img {
-            height: 32px;
-            width: 32px;
-            cursor: pointer;
-        }
-
-        .menu-icon {
-            display: none;
-            z-index: 999;
-
-            @include responsive.sm {
-                display: initial;
-            }
-        }
-
-        .menu {
-            background-color: black;
-            height: 100vh;
-            position: absolute;
-            width: 50%;
-            top: 0;
-            right: -50%;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            transition: 0.4s ease-in all;
-
-            &.active {
-                right: 0;
-            }
-
-            @include responsive.sm {
-                a {
-                    display: initial;
-                }
-            }
-
-        }
-
-
+      }
     }
+  }
 }
